fix: Login page background not responsive

--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -3,7 +3,7 @@
   flex-flow: row-reverse wrap;
   align-content: center;
 
-  height: 100vh;
+  min-height: 100vh;
   background: var(--color-primary);
 
   @media (min-width: 400px) {
